fix: fix dark mode tokens of mobile

--- a/style/mobile/components/badge/v2/_index.less
+++ b/style/mobile/components/badge/v2/_index.less
@@ -90,7 +90,7 @@
   }
 
   &__content {
-    color: @badge-context-text-color;
+    color: @badge-content-text-color;
   }
 
   &__content:not(:empty) + .t-has-count {
@@ -103,6 +103,6 @@
   &__content-text {
     display: block;
     line-height: 24px;
-    color: @badge-context-text-color;
+    color: @badge-content-text-color;
   }
 }
