--- a/style/mobile/components/badge/v2/_var.less
+++ b/style/mobile/components/badge/v2/_var.less
@@ -8,7 +8,7 @@
 @badge-border-radius: var(--td-badge-border-radius, 2px);
 @border-bubble-border-radius: var(--td-badge-bubble-border-radius, 10px 10px 10px 1px);
 @badge-dot-size: var(--td-badge-dot-size, 8px);
-@badge-context-text-color: var(--td-badge-context-text-color, @text-color-primary);
+@badge-content-text-color: var(--td-badge-content-text-color, @text-color-primary);
 
 // large
 @badge-large-font-size: var(--td-badge-large-font-size, @font-size-s);
